--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -3,83 +3,105 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Admin Console</title>
+        <title>Maweed Console</title>
+        <link rel="stylesheet" type="text/css" href="/MaweedConsole/jsfcrud.xhtml" />
         <!--<h:outputStylesheet name="css/jsfcrud.css"/>-->
-        <h:outputStylesheet name="css/indexcss.css"/>
+        <h:outputStylesheet name="css/Normalize.css"/>
+        <h:outputStylesheet name="css/indexcss_2.css"/>
     </h:head>
     <h:body>
-        <div class="header-logo">
-            <h:graphicImage value="resources/images/main/logo-white.png" /><br />
-        </div>
-        <div class="header">
-            <h1>Admin Console</h1>
-        </div>
-        <br />
-        <div class="main_div">
-            <div class="container">
-                <h:graphicImage value="resources/images/main/appointment.png" /><br />
-                <h:link class="linkStyle" outcome="/appointment/List" value="Appointment"/>
-            </div>  
-            <div class="container">
-                <h:graphicImage value="resources/images/main/location-pointer.png"/><br />
-                <h:link outcome="/area/List" value="Area"/>
+        <div class="header-top">
+
+            <div class="console_menu">
+                <div class="logo_div">
+                    <h:graphicImage value="resources/images/main/logo.png" />
+                </div>
+                <ul>
+                    <li>
+                        <h:graphicImage value="resources/images/main/dashboard24.png" />
+                        <h:link outcome="/doctor/List" value="Dashboard"/>
+                    </li>
+
+                    <h2>-Hospital Page
+                        <ol class="sub_menu">
+                            <li>
+                                <h:graphicImage value="resources/images/main/photo24.png" />
+                                <h:link outcome="/hospitalImage/List" value="1-Hospitals Images"/>
+                            </li>
+                            <li>
+                                <h:graphicImage value="resources/images/main/clinic24.png" />
+                                <h:link outcome="/clinic/List" value="2-Clinic"/>
+                            </li>
+                            <li>
+                                <h:graphicImage value="resources/images/main/service24.png" />
+                                <h:link outcome="/clinicService/List" value="3-ClinicService"/>
+                            </li>
+                            <li>
+                                <h:graphicImage value="resources/images/main/doctor.png" />
+                                <h:link outcome="/doctor/List" value="4-Doctor"/>
+                            </li>
+                        </ol>
+                    </h2>
+
+                    <li>
+                        <h:graphicImage value="resources/images/main/mail24.png" />
+                        <h:link outcome="/doctor/List" value="Mail"/>
+                    </li>
+                    <li>
+                        <h:graphicImage value="resources/images/main/percentage24.png" />
+                        <h:link outcome="/doctor/List" value="Offers"/>
+                    </li>
+                    <li>
+                        <h:form >
+                            <h:graphicImage value="resources/images/main/power-button.png" />
+                            <h:commandLink value="Logout" action="#{userAuthController.logout()}" style="color: #e33b06;"/>  
+                        </h:form>
+                    </li>
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/pills24.png" />
+                    <h:link outcome="/serviceList/List" value="List of Services"/>
+                </li>-->
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/group2.png" />
+                    <h:link outcome="/groupAuth/List" value="GroupAuth"/>
+                </li>-->
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/user24.png" />
+                    <h:link outcome="/guest/List" value="Guest"/>
+                </li>-->
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/hospital24.png" />
+                    <h:link outcome="/hospital/List" value="Hospital List"/>
+                </li>-->
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/insurance24.png" />
+                    <h:link outcome="/insurance/List" value="Insurance"/>
+                </li>-->
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/login24.png" />
+                    <h:link outcome="/userAuth/List" value="HospitalLogin"/>
+                </li>-->
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/star24.png"/>
+                    <h:link outcome="/hospitalrating/List" value="Rating"/>
+                </li>-->
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/calendar-day24.png" />
+                    <h:link class="linkStyle" outcome="/appointment/List" value="Appointment"/>
+                </li>-->  
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/area24.png"/>
+                    <h:link outcome="/area/List" value="Area"/>
+                </li>-->
+
+                    <!--<li>
+                    <h:graphicImage value="resources/images/main/category24.png"/>
+                    <h:link outcome="/category/List" value="Clinics Categories"/>
+                </li>-->
+                </ul>
+
             </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/clinic.png" /><br />
-                <h:link outcome="/clinic/List" value="Clinic"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/service.png" /><br />
-                <h:link outcome="/clinicService/List" value="ClinicService"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/doctor.png" /><br />
-                <h:link outcome="/doctor/List" value="Doctor"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/multiple-users.png" /><br />
-                <h:link outcome="/groupAuth/List" value="GroupAuth"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/user.png" /><br />
-                <h:link outcome="/guest/List" value="Guest"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/hospital.png" /><br />
-                <h:link outcome="/hospital/List" value="Hospital Items"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/health.png" /><br />
-                <h:link outcome="/insurance/List" value="Insurance"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/man-user.png" /><br />
-                <h:link outcome="/userAuth/List" value="UserAuth"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/rating.png" style="width: 100px; height: 100px;"/><br />
-                <h:link outcome="/hospitalrating/List" value="Rating"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/list_of_values.jpg" style="width: 100px; height: 100px;"/><br />
-                <h:link outcome="/serviceList/List" value="List of Services"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/list_of_values.jpg" style="width: 100px; height: 100px;"/><br />
-                <h:link outcome="/category/List" value="Clinics Categories"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/list_of_values.jpg" style="width: 100px; height: 100px;"/><br />
-                <h:link outcome="/hospitalImage/List" value="Hospitals Images"/>
-            </div>
-            <div class="container">
-                <h:graphicImage value="resources/images/main/list_of_values.jpg" style="width: 100px; height: 100px;"/><br />
-                <h:link outcome="/nationalities/List" value="Nationalities"/>
-            </div>
-        </div>
-        <h:form>
-            <h:commandLink value="Logout" action="#{userAuthController.logout()}"/>
-        </h:form>
+        </div><!--left div-->
     </h:body>
 </html>
 
